[gd_scene format=3 uid="uid://bqmgg0bnn8ibr"]

[ext_resource type="Script" uid="uid://d0ml8qjdd2du7" path="res://scenes/MainMenu/Main_menu.gd" id="1_i21gk"]
[ext_resource type="Texture2D" uid="uid://d0sl2ugga4rvn" path="res://Assets/Item2D/Background1.png" id="2_0fo2e"]

[node name="MainMenu" type="Control" unique_id=979077593]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i21gk")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1630628909]
self_modulate = Color(1, 1, 1, 0.70000005)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_0fo2e")
expand_mode = 1

[node name="Title" type="RichTextLabel" parent="." unique_id=1733614463]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -315.5
offset_top = 80.0
offset_right = 315.5
offset_bottom = 219.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 100
text = "SPEED4NEED"

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=210471993]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.25
offset_top = -101.0
offset_right = 127.25
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=354104619]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ButtonPlay" type="Button" parent="MarginContainer/HBoxContainer" unique_id=2126858095]
layout_mode = 2
text = "PLAY"

[node name="ButtonSettings" type="Button" parent="MarginContainer/HBoxContainer" unique_id=1180927028]
layout_mode = 2
text = "SETTINGS"

[node name="ButtonQuit" type="Button" parent="MarginContainer/HBoxContainer" unique_id=122100716]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
